--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ Dark green: #28b485
         font-size: 1.6rem;
         color: #fff;
         pointer-events: none;
-        transition: .2s;
+        transition: all .2s;
     }
     
     .login-box .input-box input:focus~label,
@@ -97,7 +97,7 @@ Dark green: #28b485
         padding: 1rem 2rem;
         cursor: pointer;
         border-radius: .5rem;
-        transition: all .2s;
+        transition: border .2s;
     }
     
     .login-box input[type="submit"]:hover {
